package org.example;

public enum TipoReunion{
    MARKETING,
    TECNICA,
    OTROS;
}
